--- a/model/gender_clf.ipynb
+++ b/model/gender_clf.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\wagnerca\\AppData\\Local\\Continuum\\Anaconda3\\lib\\site-packages\\sklearn\\ensemble\\weight_boosting.py:29: DeprecationWarning: numpy.core.umath_tests is an internal NumPy module and should not be imported. It will be removed in a future NumPy release.\n",
+      "  from numpy.core.umath_tests import inner1d\n"
+     ]
+    }
+   ],
    "source": [
     "import normalize\n",
     "import sklearn\n",
@@ -40,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +656,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 233,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +685,7 @@
        "(1325, 32)"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +707,7 @@
        "Name: gender, dtype: int64"
       ]
      },
-     "execution_count": 236,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +744,7 @@
        "Name: gender, dtype: int64"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -765,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +979,7 @@
        "[5 rows x 35 columns]"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -981,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,24 +1001,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "ename": "NameError",
-     "evalue": "name 'series_col' is not defined",
+     "evalue": "name 'plot_loged' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-241-48e07510aa82>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mplot_loged\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"eig_central\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;31m#plot_square_root(data, \"eig_central\")\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-229-66f352f34cc7>\u001b[0m in \u001b[0;36mplot_loged\u001b[1;34m(data, col_name)\u001b[0m\n\u001b[0;32m    359\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    360\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mplot_loged\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcol_name\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 361\u001b[1;33m     \u001b[0mmin_val\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mseries_col\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    362\u001b[0m     \u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcol_name\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mv\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mabs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmin_val\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mv\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcol_name\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    363\u001b[0m     \u001b[0mx\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcol_name\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'series_col' is not defined"
+      "\u001b[1;32m<ipython-input-14-48e07510aa82>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mplot_loged\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"eig_central\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;31m#plot_square_root(data, \"eig_central\")\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'plot_loged' is not defined"
      ]
     }
    ],
    "source": [
-    "plot_loged(data, \"eig_central\")\n",
+    "normalize.plot_loged(data, \"eig_central\")\n",
     "#plot_square_root(data, \"eig_central\")"
    ]
   },
@@ -1019,7 +1027,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_square_root(data, \"views\")\n"
+    "normalize.plot_square_root(data, \"views\")\n"
    ]
   },
   {
@@ -1084,7 +1092,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_loged(data, \"efficiency\")"
+    "normalize.plot_loged(data, \"efficiency\")"
    ]
   },
   {
@@ -1093,7 +1101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_loged(data, \"k_core\")"
+    "normalize.plot_loged(data, \"k_core\")"
    ]
   },
   {
@@ -1102,7 +1110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_loged(data, \"out_degree\")"
+    "normalize.plot_loged(data, \"out_degree\")"
    ]
   },
   {
@@ -1111,7 +1119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_loged(data, \"in_degree\")"
+    "normalize.plot_loged(data, \"in_degree\")"
    ]
   },
   {
@@ -1196,11 +1204,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train_norm = zscore_wikipedia_entered(X_train, columns=[\"eig_central\",\"in_degree\",\"k_core\",\"out_degree\",\"views\"])\n",
-    "X_test_norm = zscore_wikipedia_entered(X_test, columns=[\"eig_central\",\"in_degree\",\"k_core\",\"out_degree\",\"views\"])\n",
+    "X_train_norm = normalize.zscore_wikipedia_entered(X_train, columns=[\"eig_central\",\"in_degree\",\"k_core\",\"out_degree\",\"views\"])\n",
+    "X_test_norm = normalizezscore_wikipedia_entered(X_test, columns=[\"eig_central\",\"in_degree\",\"k_core\",\"out_degree\",\"views\"])\n",
     "\n",
-    "#X_train_norm = normalize(X_train_norm, columns=[\"eig_central\",\"in_degree\",\"k_core\",\"out_degree\",\"views\"])\n",
-    "#X_test_norm = normalize(X_test_norm, columns=[\"eig_central\",\"in_degree\",\"k_core\",\"out_degree\",\"views\"])"
+    "#X_train_norm = normalize.normalize(X_train_norm, columns=[\"eig_central\",\"in_degree\",\"k_core\",\"out_degree\",\"views\"])\n",
+    "#X_test_norm = normalize.normalize(X_test_norm, columns=[\"eig_central\",\"in_degree\",\"k_core\",\"out_degree\",\"views\"])"
    ]
   },
   {
@@ -1363,11 +1371,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train_norm = zscore_wikipedia_entered(X_train, columns=[\"eig_central\",\"in_degree\",\"k_core\",\"out_degree\",\"views\"])\n",
-    "X_test_norm = zscore_wikipedia_entered(X_test, columns=[\"eig_central\",\"in_degree\",\"k_core\",\"out_degree\",\"views\"])\n",
+    "X_train_norm = normalize.zscore_wikipedia_entered(X_train, columns=[\"eig_central\",\"in_degree\",\"k_core\",\"out_degree\",\"views\"])\n",
+    "X_test_norm = normalize.zscore_wikipedia_entered(X_test, columns=[\"eig_central\",\"in_degree\",\"k_core\",\"out_degree\",\"views\"])\n",
     "\n",
-    "#X_train_norm = normalize(X_train_norm, columns=[\"eig_central\",\"in_degree\",\"k_core\",\"out_degree\",\"views\"])\n",
-    "#X_test_norm = normalize(X_test_norm, columns=[\"eig_central\",\"in_degree\",\"k_core\",\"out_degree\",\"views\"])"
+    "#X_train_norm = normalize.normalize(X_train_norm, columns=[\"eig_central\",\"in_degree\",\"k_core\",\"out_degree\",\"views\"])\n",
+    "#X_test_norm = normalizenormalize(X_test_norm, columns=[\"eig_central\",\"in_degree\",\"k_core\",\"out_degree\",\"views\"])"
    ]
   },
   {
