log reg coefficients

--- a/INTRO NOTEBOOK.ipynb
+++ b/INTRO NOTEBOOK.ipynb
@@ -313,8 +313,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we do not need a network for every month, we first need to filter the edge lists. This is done with the script:\n",
-    "* filter_edgelist_data.py"
+    "As we do not need a network for every month, we first need to filter the edge lists according to preference. This is done with the script:\n",
+    "```python\n",
+    "python filter_edgelist_data.py [edge_list_dir_path] [path_save] [interval]\n",
+    "```\n",
+    "Every file contains an edge lists for a specific month, i.e. 2016_5.csv - this is May 2016. Sometimes it is neded to filter out the files to a monthly **interval** 4m (every 4 months),6m (every 6 months),12m (every 12 months). Runing this script one should get all files in specified folder (**edge_list_dir_path**), filter them according to the specified **interval**, and store them in the appropriate directory **path save**"
    ]
   },
   {
