--- a/model/views_prediction.ipynb
+++ b/model/views_prediction.ipynb
@@ -4398,9 +4398,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:Anaconda3]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-Anaconda3-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4412,7 +4412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
