intro notebook and some reorganizing

--- a/INTRO NOTEBOOK.ipynb
+++ b/INTRO NOTEBOOK.ipynb
@@ -344,7 +344,19 @@
     "\n",
     "5. To add the **efficiency** attribute to the nodes, we need to calculate the efficiency by using a Python 2 implementation using the graph tool. This contains a few steps and pieces of code \n",
     "\n",
-    "The script **calculate_efficiency.py** uses **graph_tool** which has Python 2 support only. The methods from this script are used in the notebook: **add_efficiency.ipynb**\n"
+    "The script **calculate_efficiency.py** uses **graph_tool** which has Python 2 support only. The methods from this script are used in the notebook: **add_efficiency.ipynb**\n",
+    "\n",
+    "6. To add the year when the page was added to wikipedia, we can use the edge-list files, because we can see when an ID has first sown up. Using this data we build cohorts of ID's that have entered Wikipedia in the same year. The cohorts are created and stored using the notebook below:\n",
+    "\n",
+    "    **cohorts.ipynb**\n",
+    "    \n",
+    "7. The metadata file stores everything (dates, lists etc.) as strings, this is handled (converted back to proper data type) using:\n",
+    "\n",
+    "    **initial_clean.ipynb**\n",
+    "    \n",
+    "8. Finnaly all the additionaly added information can is combined with this notebook:\n",
+    "\n",
+    "    **connecting_data.ipynb**"
    ]
   },
   {
@@ -361,7 +373,24 @@
     "Different explorations can be found in:\n",
     "* /exploration/\n",
     "* /pageviews/pageviews_exploration.ipynb\n",
-    "* /model/explore.ipynb"
+    "* /model/explore.ipynb\n",
+    "* exploration/dataset_check.ipynb\n",
+    "* arcticle_length.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Kolmogorov-Smirnov Test "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We use this to find the difference betwwen the distributions of network properties (in-degree, out-degree, k-core, eigenvector centrality) using the code in the notebook below:\n",
+    "*  **d_test.ipynb**"
    ]
   },
   {
@@ -395,6 +424,14 @@
    "metadata": {},
    "source": [
     "# Network Size plots"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To produce plots like the one below, use the following:\n",
+    "* network_size.ipynb "
    ]
   },
   {
