entered removed from log reg general

--- a/model/gender_clf.ipynb
+++ b/model/gender_clf.ipynb
@@ -3502,7 +3502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3511,7 +3511,7 @@
     "    df = pd.read_pickle(path)\n",
     "    df = preprocess_data_frame(df, [\"gender\"])\n",
     "    if \"is_alive_no\" in df.columns and \"distance_delta\" in df.columns and \"other_p\" in df.columns:\n",
-    "        df = df.drop([\"is_alive_unknown\", \"is_alive_no\",\"ply\", 'us', 'de', 'fr', 'in', 'cd', 'no', 'ru', 'gb', 'other_n', 'dem', 'rep',\n",
+    "        df = df.drop([\"entered\",\"is_alive_unknown\", \"is_alive_no\",\"ply\", 'us', 'de', 'fr', 'in', 'cd', 'no', 'ru', 'gb', 'other_n', 'dem', 'rep',\n",
     "   'indi', 'inc', 'cpc', 'bjp', 'other_p',\"year_interval_3\",\"year_interval_2\",\"year_interval_1\"],axis=1)\n",
     "    X,y=split_dataframe(df,\"gender\")\n",
     "    X_over, y_over = over_sample(X,y)\n",
@@ -3545,7 +3545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -3556,7 +3556,7 @@
       "{0, 1}\n",
       "[0, 1]\n",
       "{0, 1}\n",
-      "(72680, 25) (72680,)\n"
+      "(72680, 24) (72680,)\n"
      ]
     }
    ],
@@ -3566,7 +3566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -3579,28 +3579,27 @@
       "\\hline\n",
       "  nationalities &        0.15 \\\\\n",
       "\\hline       is\\_alive &        0.14 \\\\\n",
-      "\\hline      party\\_num &        0.12 \\\\\n",
-      "\\hline          views &        0.11 \\\\\n",
-      "\\hline     out\\_degree &        0.06 \\\\\n",
-      "\\hline        entered &        0.06 \\\\\n",
+      "\\hline      party\\_num &        0.14 \\\\\n",
+      "\\hline          views &        0.13 \\\\\n",
+      "\\hline     out\\_degree &        0.07 \\\\\n",
+      "\\hline      in\\_degree &        0.06 \\\\\n",
       "\\hline        d\\_death &        0.06 \\\\\n",
-      "\\hline distance\\_delta &        0.04 \\\\\n",
-      "\\hline        other\\_o &        0.04 \\\\\n",
-      "\\hline      in\\_degree &        0.04 \\\\\n",
-      "\\hline        d\\_birth &        0.04 \\\\\n",
+      "\\hline        other\\_o &        0.05 \\\\\n",
+      "\\hline         k\\_core &        0.04 \\\\\n",
       "\\hline    eig\\_central &        0.03 \\\\\n",
-      "\\hline         k\\_core &        0.03 \\\\\n",
-      "\\hline     efficiency &        0.02 \\\\\n",
-      "\\hline            age &        0.02 \\\\\n",
+      "\\hline     efficiency &        0.03 \\\\\n",
+      "\\hline            age &        0.03 \\\\\n",
+      "\\hline distance\\_delta &        0.02 \\\\\n",
+      "\\hline        d\\_birth &        0.02 \\\\\n",
       "\\hline    occupations &        0.01 \\\\\n",
       "\\hline         writer &        0.01 \\\\\n",
       "\\hline          actor &        0.00 \\\\\n",
-      "\\hline      scientist &        0.00 \\\\\n",
       "\\hline     journalist &        0.00 \\\\\n",
-      "\\hline      historian &        0.00 \\\\\n",
-      "\\hline         lawyer &        0.00 \\\\\n",
+      "\\hline      scientist &        0.00 \\\\\n",
       "\\hline      economist &        0.00 \\\\\n",
+      "\\hline         lawyer &        0.00 \\\\\n",
       "\\hline      physician &        0.00 \\\\\n",
+      "\\hline      historian &        0.00 \\\\\n",
       "\\hline       athleate &        0.00 \\\\\n",
       "\\hline\n",
       "\\end{tabular}\n",
@@ -3611,6 +3610,13 @@
    "source": [
     "print_latex(df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
