added unidirectional link plots for countries

--- a/model/gender_clf.ipynb
+++ b/model/gender_clf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -352,11 +352,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<input>:71: DeprecationWarning: invalid escape sequence \\h\n",
+      "<input>:71: DeprecationWarning: invalid escape sequence \\h\n",
+      "<input>:71: DeprecationWarning: invalid escape sequence \\h\n",
+      "<input>:71: DeprecationWarning: invalid escape sequence \\h\n",
+      "<input>:71: DeprecationWarning: invalid escape sequence \\h\n",
+      "<input>:71: DeprecationWarning: invalid escape sequence \\h\n",
+      "<input>:71: DeprecationWarning: invalid escape sequence \\h\n",
+      "<input>:71: DeprecationWarning: invalid escape sequence \\h\n",
+      "<input>:71: DeprecationWarning: invalid escape sequence \\h\n",
+      "<input>:71: DeprecationWarning: invalid escape sequence \\h\n",
+      "<input>:71: DeprecationWarning: invalid escape sequence \\h\n",
+      "<input>:71: DeprecationWarning: invalid escape sequence \\h\n",
+      "<ipython-input-12-28c87413e91b>:71: DeprecationWarning: invalid escape sequence \\h\n",
+      "  \"\\\\\\\\\\n\\\\hline\").replace(\"\\hline\\hline\",\"\\hline\")\n",
+      "<ipython-input-12-28c87413e91b>:71: DeprecationWarning: invalid escape sequence \\h\n",
+      "  \"\\\\\\\\\\n\\\\hline\").replace(\"\\hline\\hline\",\"\\hline\")\n"
+     ]
+    }
+   ],
    "source": [
     "def over_sample(X,y):\n",
     "    \"\"\"\n",
@@ -400,8 +423,8 @@
     "    Returns:\n",
     "    Accuracy, Precission, Recall, F1-Score\n",
     "    \"\"\"\n",
-    "    estimator.fit(X_train,y_train)\n",
-    "    predict = estimator.predict(X_test)\n",
+    "    estimator.fit(X,y)\n",
+    "#     predict = estimator.predict(X_test)\n",
     "    acc = cross_val_score(estimator, X,y,scoring=\"accuracy\", cv=10).mean()\n",
     "    re = cross_val_score(estimator, X,y,scoring=\"recall\", cv=10).mean()\n",
     "    pr = cross_val_score(estimator, X,y,scoring=\"precision\", cv=10).mean()\n",
@@ -434,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -1159,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -2184,7 +2207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -2201,7 +2224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -2228,7 +2251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -2271,7 +2294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -2308,42 +2331,42 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>USA</td>\n",
-       "      <td>0.825002</td>\n",
-       "      <td>0.893300</td>\n",
-       "      <td>0.774140</td>\n",
-       "      <td>0.836818</td>\n",
+       "      <td>0.829732</td>\n",
+       "      <td>0.894014</td>\n",
+       "      <td>0.752223</td>\n",
+       "      <td>0.841088</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Germany</td>\n",
-       "      <td>0.884385</td>\n",
-       "      <td>0.928972</td>\n",
-       "      <td>0.828225</td>\n",
-       "      <td>0.882944</td>\n",
+       "      <td>0.870280</td>\n",
+       "      <td>0.923305</td>\n",
+       "      <td>0.838069</td>\n",
+       "      <td>0.878969</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>France</td>\n",
-       "      <td>0.863992</td>\n",
-       "      <td>0.915566</td>\n",
-       "      <td>0.837461</td>\n",
-       "      <td>0.864161</td>\n",
+       "      <td>0.860344</td>\n",
+       "      <td>0.925034</td>\n",
+       "      <td>0.852351</td>\n",
+       "      <td>0.874671</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Great Britain</td>\n",
-       "      <td>0.854167</td>\n",
-       "      <td>0.926044</td>\n",
-       "      <td>0.846538</td>\n",
-       "      <td>0.899402</td>\n",
+       "      <td>0.874359</td>\n",
+       "      <td>0.927627</td>\n",
+       "      <td>0.846090</td>\n",
+       "      <td>0.892677</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Russia</td>\n",
-       "      <td>0.932428</td>\n",
-       "      <td>0.957770</td>\n",
-       "      <td>0.937971</td>\n",
-       "      <td>0.922759</td>\n",
+       "      <td>0.927470</td>\n",
+       "      <td>0.956221</td>\n",
+       "      <td>0.935897</td>\n",
+       "      <td>0.943001</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2351,14 +2374,14 @@
       ],
       "text/plain": [
        "         Country  Accuracy  Precision    Recall        F1\n",
-       "0            USA  0.825002   0.893300  0.774140  0.836818\n",
-       "1        Germany  0.884385   0.928972  0.828225  0.882944\n",
-       "2         France  0.863992   0.915566  0.837461  0.864161\n",
-       "3  Great Britain  0.854167   0.926044  0.846538  0.899402\n",
-       "4         Russia  0.932428   0.957770  0.937971  0.922759"
+       "0            USA  0.829732   0.894014  0.752223  0.841088\n",
+       "1        Germany  0.870280   0.923305  0.838069  0.878969\n",
+       "2         France  0.860344   0.925034  0.852351  0.874671\n",
+       "3  Great Britain  0.874359   0.927627  0.846090  0.892677\n",
+       "4         Russia  0.927470   0.956221  0.935897  0.943001"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2369,7 +2392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -2382,11 +2405,11 @@
       "\\hline\n",
       "       Country &  Accuracy &  Precision &  Recall &    F1 \\\\\n",
       "\\hline\n",
-      "           USA &      0.83 &       0.89 &    0.77 &  0.84 \\\\\n",
-      "\\hline       Germany &      0.88 &       0.93 &    0.83 &  0.88 \\\\\n",
-      "\\hline        France &      0.86 &       0.92 &    0.84 &  0.86 \\\\\n",
-      "\\hline Great Britain &      0.85 &       0.93 &    0.85 &  0.90 \\\\\n",
-      "\\hline        Russia &      0.93 &       0.96 &    0.94 &  0.92 \\\\\n",
+      "           USA &      0.83 &       0.89 &    0.75 &  0.84 \\\\\n",
+      "\\hline       Germany &      0.87 &       0.92 &    0.84 &  0.88 \\\\\n",
+      "\\hline        France &      0.86 &       0.93 &    0.85 &  0.87 \\\\\n",
+      "\\hline Great Britain &      0.87 &       0.93 &    0.85 &  0.89 \\\\\n",
+      "\\hline        Russia &      0.93 &       0.96 &    0.94 &  0.94 \\\\\n",
       "\\hline\n",
       "\\end{tabular}\n",
       "\n"
@@ -2399,7 +2422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -2412,32 +2435,160 @@
       "{0, 1}\n",
       "[0, 1]\n",
       "{0, 1}\n",
-      "(8030, 18) (8030,)\n",
+      "(8030, 32) (8030,)\n",
       "['female', 'male']\n",
       "{0, 1}\n",
       "[0, 1]\n",
       "{0, 1}\n",
-      "(2272, 18) (2272,)\n",
+      "(2272, 32) (2272,)\n",
       "['female', 'male']\n",
       "{0, 1}\n",
       "[0, 1]\n",
       "{0, 1}\n",
-      "(2422, 18) (2422,)\n",
+      "(2422, 32) (2422,)\n",
       "['female', 'male']\n",
       "{0, 1}\n",
       "[0, 1]\n",
       "{0, 1}\n",
-      "(792, 18) (792,)\n",
+      "(792, 32) (792,)\n",
       "['female', 'male']\n",
       "{0, 1}\n",
       "[0, 1]\n",
       "{0, 1}\n",
-      "(1032, 18) (1032,)\n"
+      "(1032, 32) (1032,)\n"
      ]
     }
    ],
    "source": [
-    "df = compare_countries_df(country_dict, \"../data/final_sets/countries/model/\", 2016, r_forest)"
+    "df = compare_countries_df(country_dict, \"../data/final_sets/countries/model_large/\", 2016, log_reg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Accuracy</th>\n",
+       "      <th>Precision</th>\n",
+       "      <th>Recall</th>\n",
+       "      <th>F1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>USA</td>\n",
+       "      <td>0.658054</td>\n",
+       "      <td>0.717385</td>\n",
+       "      <td>0.525816</td>\n",
+       "      <td>0.605579</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Germany</td>\n",
+       "      <td>0.732514</td>\n",
+       "      <td>0.755819</td>\n",
+       "      <td>0.677131</td>\n",
+       "      <td>0.710680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>France</td>\n",
+       "      <td>0.735361</td>\n",
+       "      <td>0.774824</td>\n",
+       "      <td>0.664808</td>\n",
+       "      <td>0.713093</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Great Britain</td>\n",
+       "      <td>0.660673</td>\n",
+       "      <td>0.682208</td>\n",
+       "      <td>0.599423</td>\n",
+       "      <td>0.632860</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Russia</td>\n",
+       "      <td>0.609125</td>\n",
+       "      <td>0.604359</td>\n",
+       "      <td>0.564517</td>\n",
+       "      <td>0.575705</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Country  Accuracy  Precision    Recall        F1\n",
+       "0            USA  0.658054   0.717385  0.525816  0.605579\n",
+       "1        Germany  0.732514   0.755819  0.677131  0.710680\n",
+       "2         France  0.735361   0.774824  0.664808  0.713093\n",
+       "3  Great Britain  0.660673   0.682208  0.599423  0.632860\n",
+       "4         Russia  0.609125   0.604359  0.564517  0.575705"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{|c|c|c|c|c|}\n",
+      "\\hline\n",
+      "       Country &  Accuracy &  Precision &  Recall &    F1 \\\\\n",
+      "\\hline\n",
+      "           USA &      0.66 &       0.72 &    0.53 &  0.61 \\\\\n",
+      "\\hline       Germany &      0.73 &       0.76 &    0.68 &  0.71 \\\\\n",
+      "\\hline        France &      0.74 &       0.77 &    0.66 &  0.71 \\\\\n",
+      "\\hline Great Britain &      0.66 &       0.68 &    0.60 &  0.63 \\\\\n",
+      "\\hline        Russia &      0.61 &       0.60 &    0.56 &  0.58 \\\\\n",
+      "\\hline\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_latex(df, col_format=\"|c|c|c|c|c|\")"
    ]
   },
   {
